[package]
name = "batmanager"
version = "1.0.1"
edition = "2021"
authors = ["LevitatingBusinessMan"]
description = "Tool for configuring Lenovo battery settings"
readme = "README.md"
license = "MIT"
keywords = ["battery", "lenovo", "laptop", "conservation", "rapid"]
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
sudo = "0.6.0"
